# festera_seed

./: Cargo.toml  debug.sh  index.html  release.sh
css/: App.css  Home.css  Nav.css  event_editor.css  events_list.css  global.css
pkg/: package.js  package_bg.d.ts  package_bg.wasm
src/: event_editor.rs  events_view.rs  header.rs  header_icons.rs  lib.rs  model.rs
src/header/: header_icons.rs
